--- a/static/index.html
+++ b/static/index.html
@@ -46,7 +46,7 @@
       <br>
       <p id="splashtext"></p>
       <br><br>
-      <button class="homebutton" onclick="window.location.href = '/static/Discord.html'">Join our Discord!</button>
+      <button class="homebutton" onclick="window.location.href = '/static/Discord.html'">Discord Server</button>
       <button class="homebutton" id="blankbtn" onclick="blank()">Open in about:blank</button>
       <button class="homebutton" onclick="window.location.href = '/partners.html'">Partners</button>
       <br>
